[Mac][Material Design] Reduce distance between bookmark buttons.

The distance between bookmark buttons should be 10pt, not 16pt.

R=avi@chromium.org
BUG=612612

Review-Url: https://codereview.chromium.org/1992063002
Cr-Commit-Position: refs/heads/master@{#394583}